# LikeHome

./: .buildpacks  .env.example  .gitattributes  .gitignore  CODEOWNERS  Caddyfile  Caddyfile.docker  Caddyfile.prod  Procfile  README.md  database.dbml  docker-compose.yml  package-lock.json  package.json  run.js  setup.py
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
backend/api/: admin.py  pagination.py  serializers.py  throttles.py  urls.py  utils.py  validators.py  views.py
backend/api/migrations/: 0001_initial.py  0002_hotelbedsdestinationlocation_hotelbedsfacilitygroup_and_more.py  0003_hotelbedsaccommodation_hotelbedscategory_and_more.py  0004_alter_hotelbedsfacility_description_and_more.py  0005_alter_hotelbedsroom_code.py  0006_alter_hotelbedsroom_characteristicdescription.py  0007_hotelbedsgroupcategory_name_and_more.py  0008_hotelbedsclassification.py  0009_hotelbedshotel_email_and_more.py  0010_rename_hotelbedshotelinterestpoints_hotelbedshotelinterestpoint.py  0011_hotelbedshotelroomfacility_indfee.py  0012_alter_hotelbedshotelwildcard_characteristiccode_and_more.py  0013_alter_hotelbedshotelimage_roomtype.py  0014_alter_hotelbedshotelroom_roomtype.py  0015_alter_hotelbedshotel_accommodationtype_and_more.py  0016_alter_hotelbedshotel_address_and_more.py  0017_alter_hotelbedscategory_accommodationtype_and_more.py  0018_alter_account_travel_points_alter_account_user_and_more.py  0018_alter_booking_created_at_alter_booking_stripe_id.py  0019_alter_account_user.py  (+18 more)
backend/app/: config.py  middleware.py  settings.py  urls.py  wsgi.py
backend/util/: .gitignore  README.md  config.py  convert_to_fixtures.py  dataScrape.py  resources.py  scraper.py
tests/: README.md  package-lock.json  package.json  pyproject.toml
tests/automation/: LikeHomeAutomationTest.side  test_e2eValidTest.py  test_e2eValidTest2.py
(+133 files in other folders)
