[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["NoahCardoza <noahcardoza@gmail.com>", "MichaelRuiz <michael@mruiz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
django-allauth = "^0.52.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
amadeus = "^8.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
isort = "^5.12.0"
mypy = "^1.0.1"
django-stubs = {extras = ["compatible-mypy"], version = "^1.15.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.9.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"