[tool.poetry]
name = "likehome-test"
version = "0.1.0"
description = ""
authors = ["NoahCardoza <noahcardoza@gmail.com>"]
readme = "README.md"
packages = [{include = "automation"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
